# system_monitor

./: .gitignore  AUDIT_PROMPT.md  Cargo.toml  LICENSE  README.md  clippy.toml  project_structure.txt  test_debug.sh
.github/: FUNDING.yml
docs/: COMPREHENSIVE_AUDIT_REPORT.md
src/: lib.rs  main.rs
src/collectors/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs  system.rs
src/config/: mod.rs
src/models/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs  system.rs
src/routes/: dashboard.rs  metrics.rs  mod.rs
src/services/: metrics_service.rs  mod.rs
src/utils/: mod.rs
static/: index.html
static/css/: style.css
static/html/: dashboard.html  index.html
