[package]
name = "system_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-stream = "0.3"
futures = "0.3"

# Date and time
chrono = "0.4"

# Web framework
actix-web = "4.5"
actix-files = "0.6"

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System information
sysinfo = "0.37"

# Utilities
once_cell = "1.19"
env_logger = "0.11"

[dev-dependencies]
# For testing async code
tokio-test = "0.4"