# ========== Cargo.toml ========== #
[package]
name = "system_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
async-stream = "0.3.6"

# Date and time
chrono = "0.4.41"

# Web framework
actix-web = "4.11.0"
actix-files = "0.6.6"

# Serialisation
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

# System information
sysinfo = "0.37.0"

# Utilities
once_cell = "1.21.3"
env_logger = "0.11.8"
log = "0.4.27"

[dev-dependencies]
# For testing async code
