# ========== Cargo.toml ========== #
[package]
name = "system_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.52.0", features = ["full"] }
async-stream = "0.3.6"

# Date and time
chrono = "0.4.44"

# Web framework
actix-web = "4.13.0"
actix-files = "0.6.10"

# Serialisation
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# System information
sysinfo = "0.38.4"

# Utilities
once_cell = "1.21.4"
env_logger = "0.11.10"
log = "0.4.29"
